import org.apache.tools.ant.filters.*

plugins {
    id 'java'
}

group = 'tk.mjsv'
version = '0.1'

sourceCompatibility = '16'
targetCompatibility = '16'

compileJava.options.encoding = 'UTF-8'
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

repositories {
    mavenCentral()
    maven {
        name = 'papermc-repo'
        url = 'https://papermc.io/repo/repository/maven-public/'
    }
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
    mavenCentral()
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.17.1-R0.1-SNAPSHOT'
    compileOnly("net.luckperms:api:5.3")
}

processResources {
    filter ReplaceTokens, tokens: [
            'version': version
    ]
}

